--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /** Header e Footer */
 .imgheader{
-	background-image: url("../image/img_header.png");
+	background-image: url("../images/img_header.png");
 	min-height: 100px;
 	border-bottom-left-radius: 12px;
 	border-bottom-right-radius: 12px;
@@ -68,3 +68,5 @@ section:target {
 .table {
 	border: 1px solid;
 }
+
+/* Area Privada! */
