--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-/** CSS PERSONALIZADO PARA REPOSITORIO TIWM */
+/* CSS PERSONALIZADO PARA REPOSITORIO TIWM */
 
-/** Header e Footer */
+/* Header e Footer */
 .imgheader{
 	background-image: url("../images/img_header.png");
 	min-height: 100px;
@@ -14,8 +14,7 @@
 	border-top-right-radius: 12px;
 }
 
-/* Edição de botões */
-
+/* Edição de botões e Links */
 .btn{
 	text-shadow: 2px 2px 4px #000000;
 	border-radius: 12px;
@@ -25,6 +24,51 @@
 
 .btn:hover {
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	background: #6c757d;
+	cursor: pointer;
+}
+
+/* CSS utilizado nos links nas tabelas*/
+
+.table {
+	background-color: white;
+	border: unset;
+	border-top-left-radius: .25rem;
+    border-bottom-left-radius: .25rem;
+}
+
+.tableP{
+	margin-top: -15px;
+}
+
+.page-link{
+	color: black;
+}
+
+a.linktable:link {
+	color:#000000;
+	text-decoration:underline;
+}
+a.linktable:visited {
+	color:#0000ff;
+	text-decoration:none;
+}
+a.linktable:hover {
+	color: #6c757d;
+	text-decoration:underline;
+}
+
+/* CSS botões da pagina author.php */
+.btn_filtro {
+	text-shadow: 2px 2px 4px #000000;
+	border-radius: 12px;
+	background: #343a40;
+	margin: 3px;
+	height: auto;
+    width: 80px;
+}
+
+.btn_filtro:hover {
 	background: #6c757d;
 	cursor: pointer;
 }
@@ -44,16 +88,7 @@
 	margin-bottom: 5px;
 }
 
-section {
-  	display: none;
-}
-
-section:target {
-  	display: block;
-}
-
 /*Formulario em implementação*/
-
 .rowregister {
 	margin-top: 5px;
 	margin-bottom: 5px;
@@ -65,14 +100,27 @@ section:target {
 
 /* Pagina de publicação */
 
-.table {
-	border: 1px solid;
+
+/* Pagina de Autor */
+.AFiltro {
+	padding: 20px;
+	margin-bottom:  20px;
+	min-height: 20px;
 }
 
-/* Area Privada! */
+.aligncenter {
+	float: none;
+	margin: auto;
+	text-align: center;
+}
 
-/* Edição de publicação */
+.aligncenter_btn {
+	float: none;
+	margin-top: 2px;
+	margin-bottom: 2px;
+	text-align: center;
+}
 
-textarea {
-    width: -webkit-fill-available;
+.h2title{
+	margin-bottom: 20px;
 }
