Alteração de front-end
Foram feitas alterações no front-end, adicionando classes já utilizadas em outras paginas de forma à manter o front-end simétrico.

Foi removido no style.css à coloração azul nos links após acedidos.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,10 +55,12 @@ a.linktable:link {
 	color:#000000;
 	text-decoration:underline;
 }
+/* Não é utilizado!
 a.linktable:visited {
 	color:#0000ff;
 	text-decoration:none;
 }
+*/
 a.linktable:hover {
 	color: #6c757d;
 	text-decoration:underline;
